--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=micro_db_users;Username=postgres;Password=12345"
+  }
 }
