Backend tipa done

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=micro_db_users;Username=postgres;Password=12345"
+  },
+  "AppSettings": {
+    "JWTKey": "mysupersecret_secretsecretsecretkey!123"
   }
 }
