--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -11,5 +11,21 @@
   },
   "AppSettings": {
     "JWTKey": "mysupersecret_secretsecretsecretkey!123"
+  },
+  "spring": {
+    "application": {
+      "name": "users"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldFetchRegistry": true,
+      "shouldRegisterWithEureka": true
+    }
+  },
+  "instance": {
+    "port": 8075,
+    "ipAddress": "localhost"
   }
 }
